--- a/Resources/about/Legal.html
+++ b/Resources/about/Legal.html
@@ -180,13 +180,16 @@ support library is itself covered by the above license.
 
 <hr/>
 <pre>
+Protocol Buffers for Objective C
+
+Copyright 2010 Booyah Inc.
 Copyright 2008 Cyrus Najmabadi
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
 
-    http://www.apache.org/licenses/LICENSE-2.0
+     http://www.apache.org/licenses/LICENSE-2.0
 
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
