Update Legal.html, get rid of unused Contributors.html.

--- a/Resources/Legal.html
+++ b/Resources/Legal.html
@@ -12,6 +12,9 @@
     background-color: gray;
     border: 0px;
    }
+   pre {
+     overflow: scroll;
+   }
  </style>
 </head>
 <body>
@@ -22,7 +25,7 @@ Mumble for iOS is released under the following terms:
 <br/><br />
 <hr/>
 <pre>
-Copyright (C) 2009-2010 Mikkel Krautz &lt;mikkel@krautz.dk&gt;
+Copyright (C) 2009-2011 Mikkel Krautz &lt;mikkel@krautz.dk&gt;
 Copyright (C) 2005-2010 Thorvald Natvig &lt;thorvald@natvig.com&gt;
 
 All rights reserved.
@@ -54,9 +57,97 @@ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 </pre>
 <hr/>
 
+<br />
+Mumble for iOS uses the MumbleKit framework to implement its
+Mumble connectivity. MumbleKit is released under the following
+terms: 
+<br /><br />
+<hr />
+
+<pre>
+ Copyright (C) 2009-2011 Mikkel Krautz <mikkel@krautz.dk>
+ Copyright (C) 2005-2010 Thorvald Natvig <thorvald@natvig.com>
+
+ All rights reserved.
+
+ Redistribution and use in source and binary forms, with or without
+ modification, are permitted provided that the following conditions
+ are met:
+
+ - Redistributions of source code must retain the above copyright notice,
+   this list of conditions and the following disclaimer.
+ - Redistributions in binary form must reproduce the above copyright notice,
+   this list of conditions and the following disclaimer in the documentation
+   and/or other materials provided with the distribution.
+ - Neither the name of the Mumble Developers nor the names of its
+   contributors may be used to endorse or promote products derived from this
+   software without specific prior written permission.
+
+   THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
+   ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
+   LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
+   A PARTICULAR PURPOSE ARE DISCLAIMED.  IN NO EVENT SHALL THE FOUNDATION OR
+   CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
+   EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
+   PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
+   PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
+   LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
+   NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+   SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+</pre>
+<hr />
+
+<br />
+Mumble for iOS mimics Mumble on the desktop closely. Mumble for iOS and
+the MumbleKit framework uses code and ideas from Mumble. Mumble is released
+under the following terms:
+<br /><br />
+<hr />
+
+<pre>
+Copyright (C) 2005-2011, Thorvald Natvig <thorvald@natvig.com>
+Copyright (C) 2007, Stefan Gehn <mETz AT gehn DOT net>
+Copyright (C) 2007, Sebastian Schlingmann <mit_service@users.sourceforge.net>
+Copyright (C) 2008-2011, Mikkel Krautz <mikkel@krautz.dk>
+Copyright (C) 2008, Andreas Messer <andi@bupfen.de>
+Copyright (C) 2007, Trenton Schulz
+Copyright (C) 2008-2011, Stefan Hacker <dd0t@users.sourceforge.net>
+Copyright (C) 2008-2011, Snares <snares@users.sourceforge.net>
+Copyright (C) 2009-2011, Benjamin Jemlich <pcgod@users.sourceforge.net>
+
+All rights reserved.
+
+Redistribution and use in source and binary forms, with or without
+modification, are permitted provided that the following conditions
+are met:
+
+- Redistributions of source code must retain the above copyright notice,
+  this list of conditions and the following disclaimer.
+- Redistributions in binary form must reproduce the above copyright notice,
+  this list of conditions and the following disclaimer in the documentation
+  and/or other materials provided with the distribution.
+- Neither the name of the Mumble Developers nor the names of its
+  contributors may be used to endorse or promote products derived from this
+  software without specific prior written permission.
+
+THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
+`AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
+LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
+A PARTICULAR PURPOSE ARE DISCLAIMED.  IN NO EVENT SHALL THE FOUNDATION OR
+CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
+EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
+PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
+PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
+LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
+NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+</pre>
+<hr/>
+
 <br/>
-In addition to the above license (the BSD license), Mumble uses various
-libraries, released under their own terms. These are listed below.<br /><br />
+In addition to the above licenses (the BSD license), Mumble
+uses various libraries, released under their own terms. These are listed below.
+<br /><br />
 
 <br/>Speex:<br/><br/>
 
@@ -225,26 +316,6 @@ THE SOFTWARE.
 </pre>
 <hr/>
 
-<br/>Three20<br/><br/>
-
-<hr/>
-<pre>
-Copyright 2008 Joe Hewitt
-
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-
-   http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License.
-</pre>
-<hr/>
-
 <br/>OpenSSL Toolkit<br/><br/>
 
 <hr/>
@@ -359,6 +430,30 @@ limitations under the License.
  * copied and put under another distribution licence
  * [including the GNU Public Licence.]
  */
+</pre>
+<hr />
+<br />
+Mumble for iOS uses atwork from the desktop Mumble client, but also uses
+custom artwork made for the iOS version.<br /><br />
+
+<br/>Artwork Credits:<br/><br/>
+
+<hr/>
+<pre>
+App Icon:
+  Karsten Bruns (@FensterZumH0f)
+
+Mumble Icons:
+  Martin Skilnand &lt;cybknight@users.sourceforge.net&gt;
+
+Tango Icons:
+  The Tango Project (http://tango-project.org/)
+
+Mumble for iOS Icons:
+  Mikkel Krautz &lt;mikkel@krautz.dk&gt;
+
+
+
 </pre>
 
 </body>
