--- a/Resources/Legal.html
+++ b/Resources/Legal.html
@@ -434,6 +434,27 @@ THE SOFTWARE.
  */
 </pre>
 <hr />
+
+<br/>GTM - Google Toolbox for Mac<br/><br/>
+
+<hr/>
+<pre>
+Copyright 2010 Google Inc.
+
+Licensed under the Apache License, Version 2.0 (the "License"); you may not
+use this file except in compliance with the License.  You may obtain a copy
+of the License at
+
+     http://www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  See the
+License for the specific language governing permissions and limitations under
+the License.
+</pre>
+<hr/>
+
 <br />
 Mumble for iOS uses atwork from the desktop Mumble client, but also uses
 custom artwork made for the iOS version.<br /><br />
