--- a/Resources/Legal.html
+++ b/Resources/Legal.html
@@ -21,81 +21,104 @@
 </head>
 <body>
 
-Mumble is Open Source software, developed collaboratively on the internet.
+Mumble is Open Source software, developed collaboratively on the internet
+by the Mumble for iOS developers:
+
+<pre>
+Benjamin Jemlich &lt;pcgod@users.sourceforge.net&gt;
+Jimmy Selgen Nielsen &lt;jimmy.selgen@gmail.com&gt;
+Jeremy Huddleston &lt;jeremyhu@apple.com&gt;
+Mikkel Krautz &lt;mikkel@krautz.dk&gt;
+Stefan Hacker &lt;dd0t@users.sourceforge.net&gt;
+Thorvald Natvig &lt;thorvald@natvig.com&gt;
+</pre>
+
 Mumble for iOS is released under the following terms:
 
 <br/><br />
 <hr/>
 <pre>
-Copyright (C) 2009-2012 Mikkel Krautz &lt;mikkel@krautz.dk&gt;
-Copyright (C) 2005-2010 Thorvald Natvig &lt;thorvald@natvig.com&gt;
+Copyright (C) 2009-2013 The 'Mumble for iOS' Developers
 
 All rights reserved.
- 
+
 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions
 are met:
- 
+
 - Redistributions of source code must retain the above copyright notice,
   this list of conditions and the following disclaimer.
 - Redistributions in binary form must reproduce the above copyright notice,
   this list of conditions and the following disclaimer in the documentation
   and/or other materials provided with the distribution.
-- Neither the name of the Mumble Developers nor the names of its
+- Neither the name of the 'Mumble for iOS' Developers nor the names of its
   contributors may be used to endorse or promote products derived from this
   software without specific prior written permission.
- 
-THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
-``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
-LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
-A PARTICULAR PURPOSE ARE DISCLAIMED.  IN NO EVENT SHALL THE FOUNDATION OR
-CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
-EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
-PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
-PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
-LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
-NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
-SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+
+  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
+  ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
+  LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
+  A PARTICULAR PURPOSE ARE DISCLAIMED.  IN NO EVENT SHALL THE FOUNDATION OR
+  CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
+  EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
+  PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
+  PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
+  LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
+  NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+  SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 </pre>
 <hr/>
 
 <br />
 Mumble for iOS uses the MumbleKit framework to implement its
-Mumble connectivity. MumbleKit is released under the following
+Mumble connectivity. MumbleKit is developed by the MumbleKit
+developers:
+
+<pre>
+Antonio Tuzzi &lt;antonio@tok.tv&gt; (on behalf of TOK.TV Inc.)
+Benjamin Jemlich &lt;pcgod@users.sourceforge.net&gt;
+Emilio Pavia &lt;emilio@tok.tv&gt; (on behalf of TOK.TV Inc.)
+Jeremy Knope &lt;jerome@buttered-cat.com&gt;
+Jimmy Selgen Nielsen &lt;jimmy.selgen@gmail.com&gt;
+Mikkel Krautz &lt;mikkel@krautz.dk&gt;
+Stefan Hacker &lt;dd0t@users.sourceforge.net&gt;
+Thorvald Natvig &lt;thorvald@natvig.com&gt;
+</pre>
+
+MumbleKit is released under the following
 terms: 
 <br /><br />
 <hr />
 
 <pre>
- Copyright (C) 2009-2012 Mikkel Krautz <mikkel@krautz.dk>
- Copyright (C) 2005-2010 Thorvald Natvig <thorvald@natvig.com>
+Copyright (C) 2005-2012 The MumbleKit Developers
 
- All rights reserved.
+All rights reserved.
 
- Redistribution and use in source and binary forms, with or without
- modification, are permitted provided that the following conditions
- are met:
+Redistribution and use in source and binary forms, with or without
+modification, are permitted provided that the following conditions
+are met:
 
- - Redistributions of source code must retain the above copyright notice,
-   this list of conditions and the following disclaimer.
- - Redistributions in binary form must reproduce the above copyright notice,
-   this list of conditions and the following disclaimer in the documentation
-   and/or other materials provided with the distribution.
- - Neither the name of the Mumble Developers nor the names of its
-   contributors may be used to endorse or promote products derived from this
-   software without specific prior written permission.
+- Redistributions of source code must retain the above copyright notice,
+  this list of conditions and the following disclaimer.
+- Redistributions in binary form must reproduce the above copyright notice,
+  this list of conditions and the following disclaimer in the documentation
+  and/or other materials provided with the distribution.
+- Neither the name of the MumbleKit Developers nor the names of its
+  contributors may be used to endorse or promote products derived from this
+  software without specific prior written permission.
 
-   THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
-   ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
-   LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
-   A PARTICULAR PURPOSE ARE DISCLAIMED.  IN NO EVENT SHALL THE FOUNDATION OR
-   CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
-   EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
-   PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
-   PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
-   LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
-   NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
-   SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
+  ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
+  LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
+  A PARTICULAR PURPOSE ARE DISCLAIMED.  IN NO EVENT SHALL THE FOUNDATION OR
+  CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
+  EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
+  PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
+  PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
+  LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
+  NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+  SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 </pre>
 <hr />
 
@@ -107,15 +130,16 @@ under the following terms:
 <hr />
 
 <pre>
-Copyright (C) 2005-2011, Thorvald Natvig <thorvald@natvig.com>
-Copyright (C) 2007, Stefan Gehn <mETz AT gehn DOT net>
-Copyright (C) 2007, Sebastian Schlingmann <mit_service@users.sourceforge.net>
-Copyright (C) 2008-2011, Mikkel Krautz <mikkel@krautz.dk>
-Copyright (C) 2008, Andreas Messer <andi@bupfen.de>
+Copyright (C) 2005-2013, Thorvald Natvig &lt;thorvald@natvig.com&gt;
+Copyright (C) 2007, Stefan Gehn &lt;mETz@gehn.net&gt;
+Copyright (C) 2007, Sebastian Schlingmann &lt;mit_service@users.sourceforge.net&gt;
+Copyright (C) 2008-2013, Mikkel Krautz &lt;mikkel@krautz.dk&gt;
+Copyright (C) 2008, Andreas Messer &lt;andi@bupfen.de&gt;
 Copyright (C) 2007, Trenton Schulz
-Copyright (C) 2008-2011, Stefan Hacker <dd0t@users.sourceforge.net>
-Copyright (C) 2008-2011, Snares <snares@users.sourceforge.net>
-Copyright (C) 2009-2011, Benjamin Jemlich <pcgod@users.sourceforge.net>
+Copyright (C) 2008-2013, Stefan Hacker &lt;dd0t@users.sourceforge.net&gt;
+Copyright (C) 2008-2011, Snares &lt;snares@users.sourceforge.net&gt;
+Copyright (C) 2009-2013, Benjamin Jemlich &lt;pcgod@users.sourceforge.net&gt;
+Copyright (C) 2009-2013, Kissaki &lt;kissaki@gmx.de&gt;
 
 All rights reserved.
 
@@ -132,17 +156,17 @@ are met:
   contributors may be used to endorse or promote products derived from this
   software without specific prior written permission.
 
-THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
-`AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
-LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
-A PARTICULAR PURPOSE ARE DISCLAIMED.  IN NO EVENT SHALL THE FOUNDATION OR
-CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
-EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
-PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
-PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
-LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
-NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
-SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
+  `AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
+  LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
+  A PARTICULAR PURPOSE ARE DISCLAIMED.  IN NO EVENT SHALL THE FOUNDATION OR
+  CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
+  EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
+  PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
+  PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
+  LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
+  NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+  SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 </pre>
 <hr/>
 
