Resources/Legal.html: update Karsten Bruns's Twitter username.

--- a/Resources/Legal.html
+++ b/Resources/Legal.html
@@ -644,7 +644,7 @@ custom artwork made for the iOS version.<br /><br />
 <hr/>
 <pre>
 App Icon, Table View Backgrounds:
-  Karsten Bruns (@FensterZumH0f)
+  Karsten Bruns (@uberbruns)
 
 Mumble Server View Icons:
   Martin Skilnand &lt;cybknight@users.sourceforge.net&gt;
