Resources/Legal.html: sync COPYING files, etc.

--- a/Resources/Legal.html
+++ b/Resources/Legal.html
@@ -38,7 +38,7 @@ Mumble for iOS is released under the following terms:
 <br/><br />
 <hr/>
 <pre>
-Copyright (C) 2009-2013 The 'Mumble for iOS' Developers
+Copyright (C) 2009-2014 The 'Mumble for iOS' Developers
 
 All rights reserved.
 
@@ -91,7 +91,7 @@ terms:
 <hr />
 
 <pre>
-Copyright (C) 2005-2012 The MumbleKit Developers
+Copyright (C) 2005-2014 The MumbleKit Developers
 
 All rights reserved.
 
@@ -195,7 +195,7 @@ notice, this list of conditions and the following disclaimer.
 notice, this list of conditions and the following disclaimer in the
 documentation and/or other materials provided with the distribution.
 
-- Neither the name of Internet Society, IETF or IETF Trust, nor the 
+- Neither the name of Internet Society, IETF or IETF Trust, nor the
 names of specific contributors, may be used to endorse or promote
 products derived from this software without specific prior written
 permission.
@@ -218,8 +218,8 @@ specified at:
 Xiph.Org Foundation:
 https://datatracker.ietf.org/ipr/1524/
 
-Skype Limited:
-https://datatracker.ietf.org/ipr/1602/
+Microsoft Corporation:
+https://datatracker.ietf.org/ipr/1914/
 
 Broadcom Corporation:
 https://datatracker.ietf.org/ipr/1526/
@@ -398,7 +398,7 @@ THE SOFTWARE.
 <hr/>
 <pre>
 /* ====================================================================
- * Copyright (c) 1998-2008 The OpenSSL Project.  All rights reserved.
+ * Copyright (c) 1998-2011 The OpenSSL Project.  All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
